<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="vn.hust.soict.lung_function.AddPatientActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_email"
                    android:textColor="@color/White"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    android:textColor="@color/White"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/edConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirm_password"
                    android:textColor="@color/White"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/edFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_fullname"
                    android:textColor="@color/White"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutBirthDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBirthDayHint"
                    style="@style/add_patient_item_hint"
                    android:text="@string/hint_birthday"
                    android:textColor="@color/separation"/>

                <DatePicker
                    android:id="@+id/datePickerBirthDay"
                    style="@style/datePickerTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGenderHint"
                    style="@style/add_patient_item_hint"
                    android:text="@string/hint_gender"
                    android:textColor="@color/separation"/>

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/add_patient_item"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gender_male"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gender_female"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />
                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp"
                >
                <EditText android:id="@+id/edWeight"
                    style="@style/add_patient_item"
                    android:layout_height="@dimen/add_patient_item"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:textColor="@color/White"
                    android:hint="@string/hint_weight"
                    android:gravity="left"/>

                <View style="@style/separation_horizontal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/edHeight"
                    style="@style/add_patient_item"
                    android:layout_height="@dimen/add_patient_item"
                    android:imeOptions="actionNext"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:textColor="@color/White"
                    android:hint="@string/hint_height"
                    android:gravity="left"/>

                <View style="@style/separation_horizontal"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRegionHint"
                    style="@style/add_patient_item_hint"
                    android:text="@string/hint_region"
                    android:textColor="@color/lung_function_text_content"/>

                <RadioGroup
                    android:id="@+id/rgRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbRegionNorthen"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/add_patient_item"
                        android:gravity="center_vertical"
                        android:text="@string/region_northen"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />

                    <RadioButton
                        android:id="@+id/rbRegionCentral"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/add_patient_item"
                        android:gravity="center_vertical"
                        android:text="@string/region_central"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />

                    <RadioButton
                        android:id="@+id/rbRegionSouth"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/add_patient_item"
                        android:gravity="center_vertical"
                        android:text="@string/region_south"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSmoking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSmokingHint"
                    style="@style/add_patient_item_hint"
                    android:text="@string/hint_smoking"
                    android:textColor="@color/lung_function_text_content"/>

                <RadioGroup
                    android:id="@+id/rgSmoking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbSmokingYes"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/add_patient_item"
                        android:gravity="center_vertical"
                        android:text="@string/smoking_yes"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />

                    <RadioButton
                        android:id="@+id/rbSmokingNo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/add_patient_item"
                        android:gravity="center_vertical"
                        android:text="@string/smoking_no"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCareTakersHint"
                    style="@style/add_patient_item_hint"
                    android:text="@string/hint_doctor"
                    android:textColor="@color/lung_function_text_content"/>

                <RadioGroup
                    android:id="@+id/rgCareTakers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbCareTakersYes"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/add_patient_item"
                        android:gravity="center_vertical"
                        android:text="@string/doctor_yes"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />

                    <RadioButton
                        android:id="@+id/rbCareTakersNo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/add_patient_item"
                        android:gravity="center_vertical"
                        android:text="@string/doctor_no"
                        android:textColor="@color/add_patient_text"
                        android:textSize="@dimen/add_patient_text" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/edAdminPEF"
                        style="@style/add_patient_item"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLines="1"
                        android:textColor="@color/White"
                        android:hint="@string/hint_admin_PEF"
                        android:gravity="left"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/edAdminFVC"
                        style="@style/add_patient_item"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLines="1"
                        android:textColor="@color/White"
                        android:hint="@string/hint_admin_FVC"
                        android:gravity="left"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/edAdminFEV1"
                        style="@style/add_patient_item"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal|numberSigned"
                        android:maxLines="1"
                        android:textColor="@color/White"
                        android:hint="@string/hint_admin_FEV1"
                        android:gravity="left"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/hint_register"
                android:gravity="center"
                android:background="@drawable/bg_icon_patient"
                android:textColor="@color/White"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
